[package]
authors = [
  "Sergey Potapov <blake131313@gmail.com>",
  "ANtlord <antlord92@gmail.com>",
]
categories = ["config"]
description = "Yet another stupid environment config (YASEC) creates settings from environment variables."
documentation = "https://docs.rs/yasec"
edition = "2021"
homepage = "https://github.com/ANtlord/yasec"
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
name = "yasec"
readme = "README.md"
repository = "https://github.com/ANtlord/yasec"
resolver = "2"
version = "1.1.4"

[dependencies]
bytesize = "1.1.0"
chrono = "0.4.19"
humantime = "2.1.0"
lazy_static = "1.4.0"
regex = "1.6.0"
thiserror = "1.0.30"
yasec_derive = {version = "1.1.4", path = "./yasec_derive"}

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
