[package]
name = "yasec_test_suite"
version = "0.2.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
yasec = { path = "../yasec" }
yasec_derive = { path = "../yasec_derive" }
humantime = "2.1.0"
bytesize = "1.1.0"

[build-dependencies]
skeptic = "0.13"

[dev-dependencies]
skeptic = "0.13"
