[package]
name = "yasec"
version = "1.0.0"
authors = [
	"Sergey Potapov <blake131313@gmail.com>",
	"ANtlord <antlord92@gmail.com>",
]
description = "Yet another stupid environment config (YASEC) creates settings from environment variables."
categories = ["config"]
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
repository = "https://github.com/ANtlord/yasec"
homepage = "https://github.com/ANtlord/yasec"
documentation = "https://docs.rs/yasec"
readme = "README.md"

[dev-dependencies]
yasec_derive = { version = "1.0.0", path = "../yasec_derive" }
