[package]
name = "yasec_derive"
version = "1.0.0"
authors = [
	"Sergey Potapov <blake131313@gmail.com>",
	"ANtlord <antlord92@gmail.com>",
]
description = "Yet another stupid environment config (YASEC) derive crate."
categories = ["config", "web-programming"]
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
repository = "https://github.com/greyblake/yasec"
homepage = "https://github.com/greyblake/yasecs"
documentation = "https://docs.rs/yasec_derive"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.4"
quote = "0.6.8"
proc-macro2 = "0.4.19"
