[package]
name = "yasec_derive"
version = "1.1.0"
authors = [
	"Sergey Potapov <blake131313@gmail.com>",
	"ANtlord <antlord92@gmail.com>",
]
description = "Yet another stupid environment config (YASEC) derive crate."
categories = ["config", "web-programming"]
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
repository = "https://github.com/greyblake/yasec"
homepage = "https://github.com/greyblake/yasecs"
documentation = "https://docs.rs/yasec_derive"
readme = "README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.84"
quote = "1.0.14"
proc-macro2 = "1.0.36"
