[package]
authors = [
  "Sergey Potapov <blake131313@gmail.com>",
  "ANtlord <antlord92@gmail.com>",
]
categories = ["config", "web-programming"]
description = "Yet another stupid environment config (YASEC) derive crate."
documentation = "https://docs.rs/yasec_derive"
edition = "2021"
homepage = "https://github.com/greyblake/yasecs"
keywords = ["config", "env", "macro", "configuration", "environment"]
license = "MIT"
name = "yasec_derive"
readme = "README.md"
repository = "https://github.com/greyblake/yasec"
version = "1.1.2"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.14"
syn = "1.0.84"
